Atualização: Models (Categoria, Endereco, MetodoPagamento, Pagamento, Pedido, ProcessadorPagamento, Produto) atualizados; DTOs (Categoria, Endereco, MetodoPagamento, Pagamento, Pedido, ProcessadorPagamento, Produto) atualizados; Services (Categoria, Endereco, MetodoPagamento, Pagamento, Pedido, ProcessadorPagamento, Produto) atualizados; Mappers (Categoria, Endereco, MetodoPagamento, Pagamento, Pedido, ProcessadorPagamento, Produto) criados;