@@ -1,6 +1,7 @@
 package br.com.ecommerce.service;
 
 import br.com.ecommerce.dto.CategoriaDTO;
+import br.com.ecommerce.mapper.CategoriaMapper;
 import br.com.ecommerce.model.CategoriaModel;
 import br.com.ecommerce.repository.CategoriaRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -15,42 +16,41 @@ public class CategoriaServiceImpl implements CategoriaService {
 
     @Autowired
     private CategoriaRepository categoriaRepository;
+    
+    @Autowired
+    private CategoriaMapper categoriaMapper;
 
     @Override
     public CategoriaDTO salvar(CategoriaDTO categoriaDTO) {
-        CategoriaModel categoriaModel = toCategoriaModel(categoriaDTO);
-        CategoriaModel savedCategoria = categoriaRepository.save(categoriaModel);
-        return toCategoriaDTO(savedCategoria);
+        CategoriaModel categoriaModel = categoriaMapper
+        		.toCategoriaModel(categoriaDTO);
+        CategoriaModel savedCategoria = categoriaRepository
+        		.save(categoriaModel);
+        return categoriaMapper
+        		.toCategoriaDTO(savedCategoria);
     }
 
     @Override
     public Optional<CategoriaDTO> buscarPorId(Long id) {
-        return categoriaRepository.findById(id).map(this::toCategoriaDTO);
+        return categoriaRepository
+        		.findById(id)
+        		.map(categoriaMapper::toCategoriaDTO);
     }
 
     @Override
     public List<CategoriaDTO> listarTodos() {
-        return categoriaRepository.findAll().stream().map(this::toCategoriaDTO).collect(Collectors.toList());
+        return categoriaRepository
+        		.findAll()
+        		.stream()
+        		.map(categoriaMapper::toCategoriaDTO)
+        		.collect(Collectors
+        				.toList());
     }
 
     @Override
     public void deletarPorId(Long id) {
-        categoriaRepository.deleteById(id);
+        categoriaRepository
+        .deleteById(id);
     }
 
-    private CategoriaDTO toCategoriaDTO(CategoriaModel categoria) {
-        CategoriaDTO dto = new CategoriaDTO();
-        dto.setId(categoria.getId());
-        dto.setNome(categoria.getNome());
-        dto.setDescricao(categoria.getDescricao());
-        return dto;
-    }
-
-    private CategoriaModel toCategoriaModel(CategoriaDTO dto) {
-        CategoriaModel categoria = new CategoriaModel();
-        categoria.setId(dto.getId());
-        categoria.setNome(dto.getNome());
-        categoria.setDescricao(dto.getDescricao());
-        return categoria;
-    }
 }
